--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Learn-easy-react</title>
+    <meta name="title" content="Learn-easy-react" />
+    <meta name="description" content="" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://learn-easy-react-one.vercel.app/" />
+    <meta property="og:title" content="Learn-easy-react" />
+    <meta property="og:description" content="" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/vinhhoang/image/upload/v1635678381/UserImg/DSC06091_ofozp0.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://learn-easy-react-one.vercel.app/" />
+    <meta property="twitter:title" content="Learn-easy-react" />
+    <meta property="twitter:description" content="" />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/vinhhoang/image/upload/v1635678381/UserImg/DSC06091_ofozp0.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
